--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,11 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColor">@color/black_87</item>
+        <item name="android:textColorPrimary">@color/white_100</item>
     </style>
 
 </resources>
