--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -113,6 +113,26 @@
 
             </android.support.v7.widget.CardView>
 
+            <android.support.v7.widget.CardView style="@style/CardInfo">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/button_transfer"
+                        android:drawablePadding="10dp"
+                        android:drawableRight="@drawable/ic_send_black_24dp"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true" />
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+
             <android.support.v7.widget.CardView
                 style="@style/CardInfo"
                 android:layout_marginBottom="@dimen/card_info_margin">
