--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -121,6 +121,7 @@
                     android:padding="10dp">
 
                     <Button
+                        android:id="@+id/button_transfer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/button_transfer"
