--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -15,7 +15,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button_mail"
+            android:id="@+id/button_email"
             android:src="@drawable/ic_email_black_24dp"
             android:scaleType="centerInside"
             android:contentDescription="@null"
@@ -31,8 +31,8 @@
             android:scaleType="centerInside"
             android:contentDescription="@null"
             android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@id/button_mail"
-            android:layout_toStartOf="@id/button_mail" />
+            android:layout_toLeftOf="@id/button_email"
+            android:layout_toStartOf="@id/button_email" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -64,9 +64,9 @@
             android:ems="5"
             android:layout_marginTop="15dp"
             android:id="@+id/input_amount_due"
-            android:layout_below="@id/button_mail"
-            android:layout_alignRight="@id/button_mail"
-            android:layout_alignEnd="@id/button_mail" />
+            android:layout_below="@id/button_email"
+            android:layout_alignRight="@id/button_email"
+            android:layout_alignEnd="@id/button_email" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -86,8 +86,8 @@
             android:layout_marginTop="15dp"
             android:id="@+id/input_amount"
             android:layout_below="@id/input_amount_due"
-            android:layout_alignRight="@id/button_mail"
-            android:layout_alignEnd="@id/button_mail" />
+            android:layout_alignRight="@id/button_email"
+            android:layout_alignEnd="@id/button_email" />
 
         <TextView
             android:layout_width="wrap_content"
