--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -126,6 +126,7 @@
             android:inputType="number"
             android:textColor="@color/black_87"
             android:ems="5"
+            android:text="1"
             android:maxLength="3"
             android:layout_marginTop="15dp"
             android:id="@+id/input_expire_period"
