--- a/app/src/main/res/layout/operation_view.xml
+++ b/app/src/main/res/layout/operation_view.xml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
+
+    <ImageView
+        android:id="@+id/direction"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_keyboard_tab_black_24dp"
+        android:scaleType="centerInside"
+        android:padding="10dp"
+        android:contentDescription="@null" />
 
     <TextView
+        android:id="@+id/amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/name" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:padding="10dp"
+        android:layout_alignParentRight="true" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_toRightOf="@id/direction"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/amount" />
+
+</RelativeLayout>
