--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/button_email"
             android:src="@drawable/ic_email_black_24dp"
+            android:onClick="shamefulStub"
             android:scaleType="centerInside"
             android:contentDescription="@null"
             android:layout_alignParentTop="true"
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/button_phone"
             android:src="@drawable/ic_smartphone_black_24dp"
+            android:onClick="shamefulStub"
             android:scaleType="centerInside"
             android:contentDescription="@null"
             android:layout_alignParentTop="true"
@@ -39,6 +41,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/button_contact"
             android:src="@drawable/ic_contacts_black_24dp"
+            android:onClick="shamefulStub"
             android:scaleType="centerInside"
             android:contentDescription="@null"
             android:layout_alignParentTop="true"
